# deltagamma_poc_v1

./: .bandit  .bandit.bak  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  build_test_graph.py  embedding_extractor.py  fix_bandit_yaml.py  graph_builder.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup_ci.sh  train_model.py
.github/workflows/: ci_cd_workflow.yaml  code_quality.yml
.mentat/: precommit.sh
code_quality/: CodeQualityChecker.py  README.md  README_CodeQuality.md  requirements-code-quality.txt  security_upgrade.sh
code_quality/code_quality_reports/: CodeQualityReport.txt
data/: Ground Truth.csv
scripts/: check_torch_load.sh
tests/: test_smoke_pipeline.py
