[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
    \.venv
  | build
  | dist
  | __pycache__
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_decorators = true
exclude = "venv|build|tests|.venv|.mypy_cache|.pytest_cache|.tox|.vscode|node_modules"

[tool.pycln]
all = true

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["everycure"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
